test/fails/ir/nomain.ir.interpret
 function with the id "main" exists.
